syntax = "proto3";
package lbos.t1.healthcheck;

import "google/protobuf/duration.proto";


service HealthcheckWorker {
  rpc IsHttpAdvancedCheckOk (HttpAdvancedData) returns (IsOk) {}
  rpc IsHttpCheckOk (HttpData) returns (IsOk) {}
  rpc IsHttpsCheckOk (HttpsData) returns (IsOk) {}
  rpc IsIcmpCheckOk (IcmpData) returns (IsOk) {}
  rpc IsTcpCheckOk (TcpData) returns (IsOk) {}
}

message TcpData {
  string healthcheckAddress = 1;
  google.protobuf.Duration timeout = 2;
  int64 fwmark = 3;
  string id = 4;
}

message IcmpData {
  string ipS = 1;
  google.protobuf.Duration timeout = 2;
  int64 fwmark = 3;
  string id = 4;
}

message HttpData {
  string healthcheckAddress = 1;
  string uri = 2;
  repeated int64 validResponseCodes = 3;
  google.protobuf.Duration timeout = 4;
  int64 fwmark = 5;
  string id = 6;
}

message HttpsData {
  string healthcheckAddress = 1;
  string uri = 2;
  repeated int64 validResponseCodes = 3;
  google.protobuf.Duration timeout = 4;
  int64 fwmark = 5;
  string id = 6;
}

message HttpAdvancedData {
  string healthcheckType = 1;
  string healthcheckAddress = 2;
  bool nearFieldsMode = 3;
  map<string, string> userDefinedData = 4;
  google.protobuf.Duration timeout = 5;
  int64 fwmark = 6;
  string id = 7;
}

message IsOk {
  bool isOk = 1;
  string id = 2;
}
